[package]
name = "esVerticalGrabber"
version = "0.1.0"
authors = ["sitze"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
influxdb = { version = "0.1.0", features = ["derive"] }
chrono = "0.4"
#futures = "0.3"
tokio = { version = "0.2", features = ["full"] }