[package]
name = "full_grabber"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.10.8" }
influxdb = { version = "0.1.0", features = ["derive"] }
chrono = "0.4"
tokio = { version = "0.2", features = ["full"] }